@@ -47,6 +47,10 @@ __END__
 
 Time::Elapsed::Lang::FR - French language file.
 
+=head1 DEPRECATION NOTICE
+
+This module is B<DEPRECATED>. Please use L<Time::Duration>.
+
 =head1 SYNOPSIS
 
 Private module.
