@@ -40,6 +40,10 @@ __END__
 
 Time::Elapsed::Lang::TR - Turkish language file.
 
+=head1 DEPRECATION NOTICE
+
+This module is B<DEPRECATED>. Please use L<Time::Duration>.
+
 =head1 SYNOPSIS
 
 Private module.
